@@ -12,9 +12,10 @@ import org.elasticsearch.action.main.MainAction;
 import org.elasticsearch.action.main.TransportMainAction;
 import org.elasticsearch.action.support.ActionFilters;
 import org.elasticsearch.action.support.TransportAction;
-import org.elasticsearch.client.node.NodeClient;
+import org.elasticsearch.client.internal.node.NodeClient;
 import org.elasticsearch.cluster.metadata.IndexNameExpressionResolver;
 import org.elasticsearch.cluster.node.DiscoveryNodes;
+import org.elasticsearch.cluster.service.ClusterService;
 import org.elasticsearch.common.settings.ClusterSettings;
 import org.elasticsearch.common.settings.IndexScopedSettings;
 import org.elasticsearch.common.settings.Settings;
@@ -24,6 +25,7 @@ import org.elasticsearch.common.util.concurrent.ThreadContext;
 import org.elasticsearch.indices.TestIndexNameExpressionResolver;
 import org.elasticsearch.plugins.ActionPlugin;
 import org.elasticsearch.plugins.ActionPlugin.ActionHandler;
+import org.elasticsearch.plugins.interceptor.RestInterceptorActionPlugin;
 import org.elasticsearch.rest.RestChannel;
 import org.elasticsearch.rest.RestController;
 import org.elasticsearch.rest.RestHandler;
@@ -48,11 +50,14 @@ import static java.util.Collections.singletonList;
 import static org.elasticsearch.rest.RestRequest.Method.GET;
 import static org.hamcrest.Matchers.hasEntry;
 import static org.hamcrest.Matchers.startsWith;
+import static org.mockito.Mockito.mock;
 
 public class ActionModuleTests extends ESTestCase {
     public void testSetupActionsContainsKnownBuiltin() {
-        assertThat(ActionModule.setupActions(emptyList()),
-                hasEntry(MainAction.INSTANCE.name(), new ActionHandler<>(MainAction.INSTANCE, TransportMainAction.class)));
+        assertThat(
+            ActionModule.setupActions(emptyList()),
+            hasEntry(MainAction.INSTANCE.name(), new ActionHandler<>(MainAction.INSTANCE, TransportMainAction.class))
+        );
     }
 
     public void testPluginCantOverwriteBuiltinAction() {
@@ -79,8 +84,7 @@ public class ActionModuleTests extends ESTestCase {
             }
 
             @Override
-            protected void doExecute(Task task, FakeRequest request, ActionListener<ActionResponse> listener) {
-            }
+            protected void doExecute(Task task, FakeRequest request, ActionListener<ActionResponse> listener) {}
         }
         class FakeAction extends ActionType<ActionResponse> {
             protected FakeAction() {
@@ -94,39 +98,60 @@ public class ActionModuleTests extends ESTestCase {
                 return singletonList(new ActionHandler<>(action, FakeTransportAction.class));
             }
         };
-        assertThat(ActionModule.setupActions(singletonList(registersFakeAction)),
-                hasEntry("fake", new ActionHandler<>(action, FakeTransportAction.class)));
+        assertThat(
+            ActionModule.setupActions(singletonList(registersFakeAction)),
+            hasEntry("fake", new ActionHandler<>(action, FakeTransportAction.class))
+        );
     }
 
     public void testSetupRestHandlerContainsKnownBuiltin() {
         SettingsModule settings = new SettingsModule(Settings.EMPTY);
         UsageService usageService = new UsageService();
-        ActionModule actionModule = new ActionModule(settings.getSettings(),
+        ActionModule actionModule = new ActionModule(
+            settings.getSettings(),
             TestIndexNameExpressionResolver.newInstance(),
-            settings.getIndexScopedSettings(), settings.getClusterSettings(), settings.getSettingsFilter(), null, emptyList(), null,
-            null, usageService, null);
+            settings.getIndexScopedSettings(),
+            settings.getClusterSettings(),
+            settings.getSettingsFilter(),
+            null,
+            emptyList(),
+            null,
+            null,
+            usageService,
+            null,
+            null,
+            mock(ClusterService.class),
+            List.of()
+        );
         actionModule.initRestHandlers(null);
         // At this point the easiest way to confirm that a handler is loaded is to try to register another one on top of it and to fail
-        Exception e = expectThrows(IllegalArgumentException.class, () ->
-            actionModule.getRestController().registerHandler(new RestHandler() {
+        Exception e = expectThrows(
+            IllegalArgumentException.class,
+            () -> actionModule.getRestController().registerHandler(new RestHandler() {
                 @Override
-                public void handleRequest(RestRequest request, RestChannel channel, NodeClient client) throws Exception {
-                }
+                public void handleRequest(RestRequest request, RestChannel channel, NodeClient client) throws Exception {}
 
                 @Override
                 public List<Route> routes() {
                     return List.of(new Route(GET, "/"));
                 }
-            }));
+            })
+        );
         assertThat(e.getMessage(), startsWith("Cannot replace existing handler for [/] for method: GET"));
     }
 
     public void testPluginCantOverwriteBuiltinRestHandler() throws IOException {
         ActionPlugin dupsMainAction = new ActionPlugin() {
             @Override
-            public List<RestHandler> getRestHandlers(Settings settings, RestController restController, ClusterSettings clusterSettings,
-                    IndexScopedSettings indexScopedSettings, SettingsFilter settingsFilter,
-                    IndexNameExpressionResolver indexNameExpressionResolver, Supplier<DiscoveryNodes> nodesInCluster) {
+            public List<RestHandler> getRestHandlers(
+                Settings settings,
+                RestController restController,
+                ClusterSettings clusterSettings,
+                IndexScopedSettings indexScopedSettings,
+                SettingsFilter settingsFilter,
+                IndexNameExpressionResolver indexNameExpressionResolver,
+                Supplier<DiscoveryNodes> nodesInCluster
+            ) {
                 return singletonList(new RestMainAction() {
 
                     @Override
@@ -141,10 +166,22 @@ public class ActionModuleTests extends ESTestCase {
         ThreadPool threadPool = new TestThreadPool(getTestName());
         try {
             UsageService usageService = new UsageService();
-            ActionModule actionModule = new ActionModule(settings.getSettings(),
+            ActionModule actionModule = new ActionModule(
+                settings.getSettings(),
                 TestIndexNameExpressionResolver.newInstance(threadPool.getThreadContext()),
-                settings.getIndexScopedSettings(), settings.getClusterSettings(), settings.getSettingsFilter(), threadPool,
-                singletonList(dupsMainAction), null, null, usageService, null);
+                settings.getIndexScopedSettings(),
+                settings.getClusterSettings(),
+                settings.getSettingsFilter(),
+                threadPool,
+                singletonList(dupsMainAction),
+                null,
+                null,
+                usageService,
+                null,
+                null,
+                mock(ClusterService.class),
+                List.of()
+            );
             Exception e = expectThrows(IllegalArgumentException.class, () -> actionModule.initRestHandlers(null));
             assertThat(e.getMessage(), startsWith("Cannot replace existing handler for [/] for method: GET"));
         } finally {
@@ -160,14 +197,19 @@ public class ActionModuleTests extends ESTestCase {
             }
 
             @Override
-            public void handleRequest(RestRequest request, RestChannel channel, NodeClient client) throws Exception {
-            }
+            public void handleRequest(RestRequest request, RestChannel channel, NodeClient client) throws Exception {}
         }
         ActionPlugin registersFakeHandler = new ActionPlugin() {
             @Override
-            public List<RestHandler> getRestHandlers(Settings settings, RestController restController, ClusterSettings clusterSettings,
-                    IndexScopedSettings indexScopedSettings, SettingsFilter settingsFilter,
-                    IndexNameExpressionResolver indexNameExpressionResolver, Supplier<DiscoveryNodes> nodesInCluster) {
+            public List<RestHandler> getRestHandlers(
+                Settings settings,
+                RestController restController,
+                ClusterSettings clusterSettings,
+                IndexScopedSettings indexScopedSettings,
+                SettingsFilter settingsFilter,
+                IndexNameExpressionResolver indexNameExpressionResolver,
+                Supplier<DiscoveryNodes> nodesInCluster
+            ) {
                 return singletonList(new FakeHandler());
             }
         };
@@ -176,23 +218,36 @@ public class ActionModuleTests extends ESTestCase {
         ThreadPool threadPool = new TestThreadPool(getTestName());
         try {
             UsageService usageService = new UsageService();
-            ActionModule actionModule = new ActionModule(settings.getSettings(),
+            ActionModule actionModule = new ActionModule(
+                settings.getSettings(),
                 TestIndexNameExpressionResolver.newInstance(threadPool.getThreadContext()),
-                settings.getIndexScopedSettings(), settings.getClusterSettings(), settings.getSettingsFilter(), threadPool,
-                singletonList(registersFakeHandler), null, null, usageService, null);
+                settings.getIndexScopedSettings(),
+                settings.getClusterSettings(),
+                settings.getSettingsFilter(),
+                threadPool,
+                singletonList(registersFakeHandler),
+                null,
+                null,
+                usageService,
+                null,
+                null,
+                mock(ClusterService.class),
+                List.of()
+            );
             actionModule.initRestHandlers(null);
             // At this point the easiest way to confirm that a handler is loaded is to try to register another one on top of it and to fail
-            Exception e = expectThrows(IllegalArgumentException.class, () ->
-                actionModule.getRestController().registerHandler(new RestHandler() {
+            Exception e = expectThrows(
+                IllegalArgumentException.class,
+                () -> actionModule.getRestController().registerHandler(new RestHandler() {
                     @Override
-                    public void handleRequest(RestRequest request, RestChannel channel, NodeClient client) throws Exception {
-                    }
+                    public void handleRequest(RestRequest request, RestChannel channel, NodeClient client) throws Exception {}
 
                     @Override
                     public List<Route> routes() {
                         return List.of(new Route(GET, "/_dummy"));
                     }
-                }));
+                })
+            );
             assertThat(e.getMessage(), startsWith("Cannot replace existing handler for [/_dummy] for method: GET"));
         } finally {
             threadPool.shutdown();
@@ -200,10 +255,7 @@ public class ActionModuleTests extends ESTestCase {
     }
 
     public void test3rdPartyHandlerIsNotInstalled() {
-        Settings settings = Settings.builder()
-            .put("xpack.security.enabled", false)
-            .put("path.home", createTempDir())
-            .build();
+        Settings settings = Settings.builder().put("xpack.security.enabled", false).put("path.home", createTempDir()).build();
 
         SettingsModule settingsModule = new SettingsModule(Settings.EMPTY);
         ThreadPool threadPool = new TestThreadPool(getTestName());
@@ -211,14 +263,32 @@ public class ActionModuleTests extends ESTestCase {
         try {
             UsageService usageService = new UsageService();
 
-            Exception e = expectThrows(IllegalArgumentException.class, () ->
-                new ActionModule(settingsModule.getSettings(),
+            Exception e = expectThrows(
+                IllegalArgumentException.class,
+                () -> new ActionModule(
+                    settingsModule.getSettings(),
                     TestIndexNameExpressionResolver.newInstance(threadPool.getThreadContext()),
-                    settingsModule.getIndexScopedSettings(), settingsModule.getClusterSettings(), settingsModule.getSettingsFilter(),
-                    threadPool, Arrays.asList(secPlugin), null, null, usageService, null)
+                    settingsModule.getIndexScopedSettings(),
+                    settingsModule.getClusterSettings(),
+                    settingsModule.getSettingsFilter(),
+                    threadPool,
+                    Arrays.asList(secPlugin),
+                    null,
+                    null,
+                    usageService,
+                    null,
+                    null,
+                    mock(ClusterService.class),
+                    List.of()
+                )
             );
-            assertThat(e.getMessage(), Matchers.equalTo("The org.elasticsearch.action.ActionModuleTests$SecPlugin plugin tried to " +
-                "install a custom REST wrapper. This functionality is not available anymore."));
+            assertThat(
+                e.getMessage(),
+                Matchers.equalTo(
+                    "The org.elasticsearch.action.ActionModuleTests$SecPlugin plugin tried to "
+                        + "install a custom REST interceptor. This functionality is not available anymore."
+                )
+            );
         } finally {
             threadPool.shutdown();
         }
@@ -231,13 +301,12 @@ public class ActionModuleTests extends ESTestCase {
         }
 
         @Override
-        public void handleRequest(RestRequest request, RestChannel channel, NodeClient client) throws Exception {
-        }
+        public void handleRequest(RestRequest request, RestChannel channel, NodeClient client) throws Exception {}
     }
 
-    class SecPlugin implements ActionPlugin {
+    class SecPlugin implements ActionPlugin, RestInterceptorActionPlugin {
         @Override
-        public UnaryOperator<RestHandler> getRestHandlerWrapper(ThreadContext threadContext) {
+        public UnaryOperator<RestHandler> getRestHandlerInterceptor(ThreadContext threadContext) {
             return UnaryOperator.identity();
         }
     };
