@@ -8,8 +8,8 @@
 
 package org.elasticsearch.action.admin.cluster.node.tasks;
 
-import org.elasticsearch.core.Tuple;
 import org.elasticsearch.common.regex.Regex;
+import org.elasticsearch.core.Tuple;
 import org.elasticsearch.tasks.Task;
 import org.elasticsearch.tasks.TaskInfo;
 import org.elasticsearch.test.tasks.MockTaskManagerListener;
@@ -17,7 +17,6 @@ import org.elasticsearch.test.tasks.MockTaskManagerListener;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * MockTaskManagerListener that records all task registration/unregistration events
@@ -27,7 +26,7 @@ public class RecordingTaskManagerListener implements MockTaskManagerListener {
     private String[] actionMasks;
     private String localNodeId;
 
-    private List<Tuple<Boolean, TaskInfo>> events  = new ArrayList<>();
+    private List<Tuple<Boolean, TaskInfo>> events = new ArrayList<>();
 
     public RecordingTaskManagerListener(String localNodeId, String... actionMasks) {
         this.actionMasks = actionMasks;
@@ -49,20 +48,19 @@ public class RecordingTaskManagerListener implements MockTaskManagerListener {
     }
 
     @Override
-    public void waitForTaskCompletion(Task task) {
-    }
+    public void waitForTaskCompletion(Task task) {}
 
     public synchronized List<Tuple<Boolean, TaskInfo>> getEvents() {
         return List.copyOf(events);
     }
 
     public synchronized List<TaskInfo> getRegistrationEvents() {
-        List<TaskInfo> events = this.events.stream().filter(Tuple::v1).map(Tuple::v2).collect(Collectors.toList());
+        List<TaskInfo> events = this.events.stream().filter(Tuple::v1).map(Tuple::v2).toList();
         return Collections.unmodifiableList(events);
     }
 
     public synchronized List<TaskInfo> getUnregistrationEvents() {
-        List<TaskInfo> events = this.events.stream().filter(event -> event.v1() == false).map(Tuple::v2).collect(Collectors.toList());
+        List<TaskInfo> events = this.events.stream().filter(event -> event.v1() == false).map(Tuple::v2).toList();
         return Collections.unmodifiableList(events);
     }
 
