@@ -7,14 +7,20 @@
  */
 package org.elasticsearch.cluster.coordination;
 
+import org.apache.logging.log4j.Level;
+import org.apache.logging.log4j.LogManager;
 import org.elasticsearch.ElasticsearchException;
 import org.elasticsearch.Version;
+import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.cluster.node.DiscoveryNode;
 import org.elasticsearch.cluster.node.DiscoveryNodeRole;
+import org.elasticsearch.common.UUIDs;
+import org.elasticsearch.common.logging.Loggers;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.util.concurrent.DeterministicTaskQueue;
 import org.elasticsearch.discovery.DiscoveryModule;
 import org.elasticsearch.test.ESTestCase;
+import org.elasticsearch.test.MockLogAppender;
 import org.elasticsearch.test.transport.MockTransport;
 import org.elasticsearch.transport.TransportRequest;
 import org.elasticsearch.transport.TransportService;
@@ -73,18 +79,25 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
             }
         };
 
-        transportService = transport.createTransportService(Settings.EMPTY, deterministicTaskQueue.getThreadPool(),
-            TransportService.NOOP_TRANSPORT_INTERCEPTOR, boundTransportAddress -> localNode, null, emptySet());
+        transportService = transport.createTransportService(
+            Settings.EMPTY,
+            deterministicTaskQueue.getThreadPool(),
+            TransportService.NOOP_TRANSPORT_INTERCEPTOR,
+            boundTransportAddress -> localNode,
+            null,
+            emptySet()
+        );
     }
 
     private DiscoveryNode newDiscoveryNode(String nodeName) {
         return new DiscoveryNode(
-                nodeName,
-                randomAlphaOfLength(10),
-                buildNewFakeTransportAddress(),
-                emptyMap(),
-                Set.of(DiscoveryNodeRole.MASTER_ROLE),
-                Version.CURRENT);
+            nodeName,
+            randomAlphaOfLength(10),
+            buildNewFakeTransportAddress(),
+            emptyMap(),
+            Set.of(DiscoveryNodeRole.MASTER_ROLE),
+            Version.CURRENT
+        );
     }
 
     public void testBootstrapsAutomaticallyWithDefaultConfiguration() {
@@ -97,22 +110,30 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
             settings.put(UNCONFIGURED_BOOTSTRAP_TIMEOUT_SETTING.getKey(), timeout + "ms");
         }
 
-        final AtomicReference<Supplier<Iterable<DiscoveryNode>>> discoveredNodesSupplier = new AtomicReference<>(() -> {
-            throw new AssertionError("should not be called yet");
-        });
+        final AtomicReference<Supplier<Iterable<DiscoveryNode>>> discoveredNodesSupplier = new AtomicReference<>(
+            () -> { throw new AssertionError("should not be called yet"); }
+        );
 
         final AtomicBoolean bootstrapped = new AtomicBoolean();
-        ClusterBootstrapService clusterBootstrapService
-            = new ClusterBootstrapService(settings.build(), transportService, () -> discoveredNodesSupplier.get().get(),
-            () -> false, vc -> {
-            assertTrue(bootstrapped.compareAndSet(false, true));
-            assertThat(vc.getNodeIds(),
-                equalTo(Stream.of(localNode, otherNode1, otherNode2).map(DiscoveryNode::getId).collect(Collectors.toSet())));
-            assertThat(deterministicTaskQueue.getCurrentTimeMillis(), greaterThanOrEqualTo(timeout));
-        });
+        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(
+            settings.build(),
+            transportService,
+            () -> discoveredNodesSupplier.get().get(),
+            () -> false,
+            vc -> {
+                assertTrue(bootstrapped.compareAndSet(false, true));
+                assertThat(
+                    vc.getNodeIds(),
+                    equalTo(Stream.of(localNode, otherNode1, otherNode2).map(DiscoveryNode::getId).collect(Collectors.toSet()))
+                );
+                assertThat(deterministicTaskQueue.getCurrentTimeMillis(), greaterThanOrEqualTo(timeout));
+            }
+        );
 
-        deterministicTaskQueue.scheduleAt(timeout - 1,
-            () -> discoveredNodesSupplier.set(() -> Stream.of(localNode, otherNode1, otherNode2).collect(Collectors.toSet())));
+        deterministicTaskQueue.scheduleAt(
+            timeout - 1,
+            () -> discoveredNodesSupplier.set(() -> Stream.of(localNode, otherNode1, otherNode2).collect(Collectors.toSet()))
+        );
 
         transportService.start();
         clusterBootstrapService.scheduleUnconfiguredBootstrap();
@@ -133,30 +154,41 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
     }
 
     public void testDoesNothingByDefaultOnMasterIneligibleNodes() {
-        localNode = new DiscoveryNode("local", randomAlphaOfLength(10), buildNewFakeTransportAddress(), emptyMap(), emptySet(),
-            Version.CURRENT);
+        localNode = new DiscoveryNode(
+            "local",
+            randomAlphaOfLength(10),
+            buildNewFakeTransportAddress(),
+            emptyMap(),
+            emptySet(),
+            Version.CURRENT
+        );
         testDoesNothingWithSettings(Settings.builder());
     }
 
     private void testDoesNothingWithSettings(Settings.Builder builder) {
-        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(builder.build(), transportService, () -> {
-            throw new AssertionError("should not be called");
-        }, () -> false, vc -> {
-            throw new AssertionError("should not be called");
-        });
+        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(
+            builder.build(),
+            transportService,
+            () -> { throw new AssertionError("should not be called"); },
+            () -> false,
+            vc -> { throw new AssertionError("should not be called"); }
+        );
         transportService.start();
         clusterBootstrapService.scheduleUnconfiguredBootstrap();
         deterministicTaskQueue.runAllTasks();
     }
 
     public void testThrowsExceptionOnDuplicates() {
-        final IllegalArgumentException illegalArgumentException = expectThrows(IllegalArgumentException.class, () -> {
-            new ClusterBootstrapService(builder().putList(
-                INITIAL_MASTER_NODES_SETTING.getKey(), "duplicate-requirement", "duplicate-requirement").build(),
-                transportService, Collections::emptyList, () -> false, vc -> {
-                throw new AssertionError("should not be called");
-            });
-        });
+        final IllegalArgumentException illegalArgumentException = expectThrows(
+            IllegalArgumentException.class,
+            () -> new ClusterBootstrapService(
+                builder().putList(INITIAL_MASTER_NODES_SETTING.getKey(), "duplicate-requirement", "duplicate-requirement").build(),
+                transportService,
+                Collections::emptyList,
+                () -> false,
+                vc -> { throw new AssertionError("should not be called"); }
+            )
+        );
 
         assertThat(illegalArgumentException.getMessage(), containsString(INITIAL_MASTER_NODES_SETTING.getKey()));
         assertThat(illegalArgumentException.getMessage(), containsString("duplicate-requirement"));
@@ -165,13 +197,19 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
     public void testBootstrapsOnDiscoveryOfAllRequiredNodes() {
         final AtomicBoolean bootstrapped = new AtomicBoolean();
 
-        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(Settings.builder().putList(
-            INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getName(), otherNode1.getName(), otherNode2.getName()).build(),
-            transportService, () -> Stream.of(otherNode1, otherNode2).collect(Collectors.toList()), () -> false, vc -> {
-            assertTrue(bootstrapped.compareAndSet(false, true));
-            assertThat(vc.getNodeIds(), containsInAnyOrder(localNode.getId(), otherNode1.getId(), otherNode2.getId()));
-            assertThat(vc.getNodeIds(), not(hasItem(containsString("placeholder"))));
-        });
+        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(
+            Settings.builder()
+                .putList(INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getName(), otherNode1.getName(), otherNode2.getName())
+                .build(),
+            transportService,
+            () -> Stream.of(otherNode1, otherNode2).toList(),
+            () -> false,
+            vc -> {
+                assertTrue(bootstrapped.compareAndSet(false, true));
+                assertThat(vc.getNodeIds(), containsInAnyOrder(localNode.getId(), otherNode1.getId(), otherNode2.getId()));
+                assertThat(vc.getNodeIds(), not(hasItem(containsString("placeholder"))));
+            }
+        );
 
         transportService.start();
         clusterBootstrapService.onFoundPeersUpdated();
@@ -187,18 +225,24 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
     public void testBootstrapsOnDiscoveryOfTwoOfThreeRequiredNodes() {
         final AtomicBoolean bootstrapped = new AtomicBoolean();
 
-        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(Settings.builder().putList(
-            INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getName(), otherNode1.getName(), otherNode2.getName()).build(),
-            transportService, () -> singletonList(otherNode1), () -> false, vc -> {
-            assertTrue(bootstrapped.compareAndSet(false, true));
-            assertThat(vc.getNodeIds(), hasSize(3));
-            assertThat(vc.getNodeIds(), hasItem(localNode.getId()));
-            assertThat(vc.getNodeIds(), hasItem(otherNode1.getId()));
-            assertThat(vc.getNodeIds(), hasItem(allOf(startsWith(BOOTSTRAP_PLACEHOLDER_PREFIX), containsString(otherNode2.getName()))));
-            assertTrue(vc.hasQuorum(Stream.of(localNode, otherNode1).map(DiscoveryNode::getId).collect(Collectors.toList())));
-            assertFalse(vc.hasQuorum(singletonList(localNode.getId())));
-            assertFalse(vc.hasQuorum(singletonList(otherNode1.getId())));
-        });
+        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(
+            Settings.builder()
+                .putList(INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getName(), otherNode1.getName(), otherNode2.getName())
+                .build(),
+            transportService,
+            () -> singletonList(otherNode1),
+            () -> false,
+            vc -> {
+                assertTrue(bootstrapped.compareAndSet(false, true));
+                assertThat(vc.getNodeIds(), hasSize(3));
+                assertThat(vc.getNodeIds(), hasItem(localNode.getId()));
+                assertThat(vc.getNodeIds(), hasItem(otherNode1.getId()));
+                assertThat(vc.getNodeIds(), hasItem(allOf(startsWith(BOOTSTRAP_PLACEHOLDER_PREFIX), containsString(otherNode2.getName()))));
+                assertTrue(vc.hasQuorum(Stream.of(localNode, otherNode1).map(DiscoveryNode::getId).toList()));
+                assertFalse(vc.hasQuorum(singletonList(localNode.getId())));
+                assertFalse(vc.hasQuorum(singletonList(otherNode1.getId())));
+            }
+        );
 
         transportService.start();
         clusterBootstrapService.onFoundPeersUpdated();
@@ -214,27 +258,38 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
     public void testBootstrapsOnDiscoveryOfThreeOfFiveRequiredNodes() {
         final AtomicBoolean bootstrapped = new AtomicBoolean();
 
-        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(Settings.builder().putList(
-            INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getName(), otherNode1.getName(), otherNode2.getName(),
-            "missing-node-1", "missing-node-2").build(),
-            transportService, () -> Stream.of(otherNode1, otherNode2).collect(Collectors.toList()), () -> false, vc -> {
-            assertTrue(bootstrapped.compareAndSet(false, true));
-            assertThat(vc.getNodeIds(), hasSize(5));
-            assertThat(vc.getNodeIds(), hasItem(localNode.getId()));
-            assertThat(vc.getNodeIds(), hasItem(otherNode1.getId()));
-            assertThat(vc.getNodeIds(), hasItem(otherNode2.getId()));
+        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(
+            Settings.builder()
+                .putList(
+                    INITIAL_MASTER_NODES_SETTING.getKey(),
+                    localNode.getName(),
+                    otherNode1.getName(),
+                    otherNode2.getName(),
+                    "missing-node-1",
+                    "missing-node-2"
+                )
+                .build(),
+            transportService,
+            () -> Stream.of(otherNode1, otherNode2).toList(),
+            () -> false,
+            vc -> {
+                assertTrue(bootstrapped.compareAndSet(false, true));
+                assertThat(vc.getNodeIds(), hasSize(5));
+                assertThat(vc.getNodeIds(), hasItem(localNode.getId()));
+                assertThat(vc.getNodeIds(), hasItem(otherNode1.getId()));
+                assertThat(vc.getNodeIds(), hasItem(otherNode2.getId()));
 
-            final List<String> placeholders
-                = vc.getNodeIds().stream().filter(ClusterBootstrapService::isBootstrapPlaceholder).collect(Collectors.toList());
-            assertThat(placeholders.size(), equalTo(2));
-            assertNotEquals(placeholders.get(0), placeholders.get(1));
-            assertThat(placeholders, hasItem(containsString("missing-node-1")));
-            assertThat(placeholders, hasItem(containsString("missing-node-2")));
+                final List<String> placeholders = vc.getNodeIds().stream().filter(ClusterBootstrapService::isBootstrapPlaceholder).toList();
+                assertThat(placeholders.size(), equalTo(2));
+                assertNotEquals(placeholders.get(0), placeholders.get(1));
+                assertThat(placeholders, hasItem(containsString("missing-node-1")));
+                assertThat(placeholders, hasItem(containsString("missing-node-2")));
 
-            assertTrue(vc.hasQuorum(Stream.of(localNode, otherNode1, otherNode2).map(DiscoveryNode::getId).collect(Collectors.toList())));
-            assertFalse(vc.hasQuorum(Stream.of(localNode, otherNode1).map(DiscoveryNode::getId).collect(Collectors.toList())));
-            assertFalse(vc.hasQuorum(Stream.of(localNode, otherNode1).map(DiscoveryNode::getId).collect(Collectors.toList())));
-        });
+                assertTrue(vc.hasQuorum(Stream.of(localNode, otherNode1, otherNode2).map(DiscoveryNode::getId).toList()));
+                assertFalse(vc.hasQuorum(Stream.of(localNode, otherNode1).map(DiscoveryNode::getId).toList()));
+                assertFalse(vc.hasQuorum(Stream.of(localNode, otherNode1).map(DiscoveryNode::getId).toList()));
+            }
+        );
 
         transportService.start();
         clusterBootstrapService.onFoundPeersUpdated();
@@ -248,11 +303,15 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
     }
 
     public void testDoesNotBootstrapIfNoNodesDiscovered() {
-        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(Settings.builder().putList(
-            INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getName(), otherNode1.getName(), otherNode2.getName()).build(),
-            transportService, Collections::emptyList, () -> true, vc -> {
-            throw new AssertionError("should not be called");
-        });
+        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(
+            Settings.builder()
+                .putList(INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getName(), otherNode1.getName(), otherNode2.getName())
+                .build(),
+            transportService,
+            Collections::emptyList,
+            () -> true,
+            vc -> { throw new AssertionError("should not be called"); }
+        );
 
         transportService.start();
         clusterBootstrapService.onFoundPeersUpdated();
@@ -260,12 +319,22 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
     }
 
     public void testDoesNotBootstrapIfTwoOfFiveNodesDiscovered() {
-        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(Settings.builder().putList(
-            INITIAL_MASTER_NODES_SETTING.getKey(),
-            localNode.getName(), otherNode1.getName(), otherNode2.getName(), "not-a-node-1", "not-a-node-2").build(),
-            transportService, () -> Stream.of(otherNode1).collect(Collectors.toList()), () -> false, vc -> {
-            throw new AssertionError("should not be called");
-        });
+        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(
+            Settings.builder()
+                .putList(
+                    INITIAL_MASTER_NODES_SETTING.getKey(),
+                    localNode.getName(),
+                    otherNode1.getName(),
+                    otherNode2.getName(),
+                    "not-a-node-1",
+                    "not-a-node-2"
+                )
+                .build(),
+            transportService,
+            () -> Stream.of(otherNode1).toList(),
+            () -> false,
+            vc -> { throw new AssertionError("should not be called"); }
+        );
 
         transportService.start();
         clusterBootstrapService.onFoundPeersUpdated();
@@ -273,12 +342,23 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
     }
 
     public void testDoesNotBootstrapIfThreeOfSixNodesDiscovered() {
-        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(Settings.builder().putList(
-            INITIAL_MASTER_NODES_SETTING.getKey(),
-            localNode.getName(), otherNode1.getName(), otherNode2.getName(), "not-a-node-1", "not-a-node-2", "not-a-node-3").build(),
-            transportService, () -> Stream.of(otherNode1, otherNode2).collect(Collectors.toList()), () -> false, vc -> {
-            throw new AssertionError("should not be called");
-        });
+        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(
+            Settings.builder()
+                .putList(
+                    INITIAL_MASTER_NODES_SETTING.getKey(),
+                    localNode.getName(),
+                    otherNode1.getName(),
+                    otherNode2.getName(),
+                    "not-a-node-1",
+                    "not-a-node-2",
+                    "not-a-node-3"
+                )
+                .build(),
+            transportService,
+            () -> Stream.of(otherNode1, otherNode2).toList(),
+            () -> false,
+            vc -> { throw new AssertionError("should not be called"); }
+        );
 
         transportService.start();
         clusterBootstrapService.onFoundPeersUpdated();
@@ -286,11 +366,15 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
     }
 
     public void testDoesNotBootstrapIfAlreadyBootstrapped() {
-        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(Settings.builder().putList(
-            INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getName(), otherNode1.getName(), otherNode2.getName()).build(),
-            transportService, () -> Stream.of(otherNode1, otherNode2).collect(Collectors.toList()), () -> true, vc -> {
-            throw new AssertionError("should not be called");
-        });
+        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(
+            Settings.builder()
+                .putList(INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getName(), otherNode1.getName(), otherNode2.getName())
+                .build(),
+            transportService,
+            () -> Stream.of(otherNode1, otherNode2).toList(),
+            () -> true,
+            vc -> { throw new AssertionError("should not be called"); }
+        );
 
         transportService.start();
         clusterBootstrapService.onFoundPeersUpdated();
@@ -298,26 +382,36 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
     }
 
     public void testDoesNotBootstrapsOnNonMasterNode() {
-        localNode = new DiscoveryNode("local", randomAlphaOfLength(10), buildNewFakeTransportAddress(), emptyMap(), emptySet(),
-            Version.CURRENT);
-        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(Settings.builder().putList(
-            INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getName(), otherNode1.getName(), otherNode2.getName()).build(),
-            transportService, () ->
-            Stream.of(localNode, otherNode1, otherNode2).collect(Collectors.toList()), () -> false, vc -> {
-            throw new AssertionError("should not be called");
-        });
+        localNode = new DiscoveryNode(
+            "local",
+            randomAlphaOfLength(10),
+            buildNewFakeTransportAddress(),
+            emptyMap(),
+            emptySet(),
+            Version.CURRENT
+        );
+        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(
+            Settings.builder()
+                .putList(INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getName(), otherNode1.getName(), otherNode2.getName())
+                .build(),
+            transportService,
+            () -> Stream.of(localNode, otherNode1, otherNode2).toList(),
+            () -> false,
+            vc -> { throw new AssertionError("should not be called"); }
+        );
         transportService.start();
         clusterBootstrapService.onFoundPeersUpdated();
         deterministicTaskQueue.runAllTasks();
     }
 
     public void testDoesNotBootstrapsIfLocalNodeNotInInitialMasterNodes() {
-        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(Settings.builder().putList(
-            INITIAL_MASTER_NODES_SETTING.getKey(), otherNode1.getName(), otherNode2.getName()).build(),
-            transportService, () ->
-            Stream.of(localNode, otherNode1, otherNode2).collect(Collectors.toList()), () -> false, vc -> {
-            throw new AssertionError("should not be called");
-        });
+        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(
+            Settings.builder().putList(INITIAL_MASTER_NODES_SETTING.getKey(), otherNode1.getName(), otherNode2.getName()).build(),
+            transportService,
+            () -> Stream.of(localNode, otherNode1, otherNode2).toList(),
+            () -> false,
+            vc -> { throw new AssertionError("should not be called"); }
+        );
         transportService.start();
         clusterBootstrapService.onFoundPeersUpdated();
         deterministicTaskQueue.runAllTasks();
@@ -325,10 +419,12 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
 
     public void testDoesNotBootstrapsIfNotConfigured() {
         ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(
-            Settings.builder().putList(INITIAL_MASTER_NODES_SETTING.getKey()).build(), transportService,
-            () -> Stream.of(localNode, otherNode1, otherNode2).collect(Collectors.toList()), () -> false, vc -> {
-            throw new AssertionError("should not be called");
-        });
+            Settings.builder().putList(INITIAL_MASTER_NODES_SETTING.getKey()).build(),
+            transportService,
+            () -> Stream.of(localNode, otherNode1, otherNode2).toList(),
+            () -> false,
+            vc -> { throw new AssertionError("should not be called"); }
+        );
         transportService.start();
         clusterBootstrapService.scheduleUnconfiguredBootstrap();
         clusterBootstrapService.onFoundPeersUpdated();
@@ -337,14 +433,20 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
 
     public void testRetriesBootstrappingOnException() {
         final AtomicLong bootstrappingAttempts = new AtomicLong();
-        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(Settings.builder().putList(
-            INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getName(), otherNode1.getName(), otherNode2.getName()).build(),
-            transportService, () -> Stream.of(otherNode1, otherNode2).collect(Collectors.toList()), () -> false, vc -> {
-            bootstrappingAttempts.incrementAndGet();
-            if (bootstrappingAttempts.get() < 5L) {
-                throw new ElasticsearchException("test");
+        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(
+            Settings.builder()
+                .putList(INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getName(), otherNode1.getName(), otherNode2.getName())
+                .build(),
+            transportService,
+            () -> Stream.of(otherNode1, otherNode2).toList(),
+            () -> false,
+            vc -> {
+                bootstrappingAttempts.incrementAndGet();
+                if (bootstrappingAttempts.get() < 5L) {
+                    throw new ElasticsearchException("test");
+                }
             }
-        });
+        );
 
         transportService.start();
         clusterBootstrapService.onFoundPeersUpdated();
@@ -354,13 +456,14 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
     }
 
     public void testCancelsBootstrapIfRequirementMatchesMultipleNodes() {
-        AtomicReference<Iterable<DiscoveryNode>> discoveredNodes
-            = new AtomicReference<>(Stream.of(otherNode1, otherNode2).collect(Collectors.toList()));
+        AtomicReference<Iterable<DiscoveryNode>> discoveredNodes = new AtomicReference<>(Stream.of(otherNode1, otherNode2).toList());
         ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(
             Settings.builder().putList(INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getAddress().getAddress()).build(),
-            transportService, discoveredNodes::get, () -> false, vc -> {
-            throw new AssertionError("should not be called");
-        });
+            transportService,
+            discoveredNodes::get,
+            () -> false,
+            vc -> { throw new AssertionError("should not be called"); }
+        );
 
         transportService.start();
         clusterBootstrapService.onFoundPeersUpdated();
@@ -372,35 +475,41 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
     }
 
     public void testCancelsBootstrapIfNodeMatchesMultipleRequirements() {
-        AtomicReference<Iterable<DiscoveryNode>> discoveredNodes
-            = new AtomicReference<>(Stream.of(otherNode1, otherNode2).collect(Collectors.toList()));
+        AtomicReference<Iterable<DiscoveryNode>> discoveredNodes = new AtomicReference<>(Stream.of(otherNode1, otherNode2).toList());
         ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(
-            Settings.builder().putList(INITIAL_MASTER_NODES_SETTING.getKey(), otherNode1.getAddress().toString(), otherNode1.getName())
+            Settings.builder()
+                .putList(INITIAL_MASTER_NODES_SETTING.getKey(), otherNode1.getAddress().toString(), otherNode1.getName())
                 .build(),
-            transportService, discoveredNodes::get, () -> false, vc -> {
-            throw new AssertionError("should not be called");
-        });
+            transportService,
+            discoveredNodes::get,
+            () -> false,
+            vc -> { throw new AssertionError("should not be called"); }
+        );
 
         transportService.start();
         clusterBootstrapService.onFoundPeersUpdated();
         deterministicTaskQueue.runAllTasks();
 
-        discoveredNodes.set(Stream.of(
+        discoveredNodes.set(
+            Stream.of(
                 new DiscoveryNode(
-                        otherNode1.getName(),
-                        randomAlphaOfLength(10),
-                        buildNewFakeTransportAddress(),
-                        emptyMap(),
-                        Set.of(DiscoveryNodeRole.MASTER_ROLE),
-                        Version.CURRENT),
+                    otherNode1.getName(),
+                    randomAlphaOfLength(10),
+                    buildNewFakeTransportAddress(),
+                    emptyMap(),
+                    Set.of(DiscoveryNodeRole.MASTER_ROLE),
+                    Version.CURRENT
+                ),
                 new DiscoveryNode(
-                        "yet-another-node",
-                        randomAlphaOfLength(10),
-                        otherNode1.getAddress(),
-                        emptyMap(),
-                        Set.of(DiscoveryNodeRole.MASTER_ROLE),
-                        Version.CURRENT))
-                .collect(Collectors.toList()));
+                    "yet-another-node",
+                    randomAlphaOfLength(10),
+                    otherNode1.getAddress(),
+                    emptyMap(),
+                    Set.of(DiscoveryNodeRole.MASTER_ROLE),
+                    Version.CURRENT
+                )
+            ).toList()
+        );
 
         clusterBootstrapService.onFoundPeersUpdated();
         deterministicTaskQueue.runAllTasks();
@@ -409,8 +518,12 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
     public void testMatchesOnNodeName() {
         final AtomicBoolean bootstrapped = new AtomicBoolean();
         ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(
-            Settings.builder().putList(INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getName()).build(), transportService,
-            Collections::emptyList, () -> false, vc -> assertTrue(bootstrapped.compareAndSet(false, true)));
+            Settings.builder().putList(INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getName()).build(),
+            transportService,
+            Collections::emptyList,
+            () -> false,
+            vc -> assertTrue(bootstrapped.compareAndSet(false, true))
+        );
 
         transportService.start();
         clusterBootstrapService.onFoundPeersUpdated();
@@ -421,8 +534,12 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
     public void testMatchesOnNodeAddress() {
         final AtomicBoolean bootstrapped = new AtomicBoolean();
         ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(
-            Settings.builder().putList(INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getAddress().toString()).build(), transportService,
-            Collections::emptyList, () -> false, vc -> assertTrue(bootstrapped.compareAndSet(false, true)));
+            Settings.builder().putList(INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getAddress().toString()).build(),
+            transportService,
+            Collections::emptyList,
+            () -> false,
+            vc -> assertTrue(bootstrapped.compareAndSet(false, true))
+        );
 
         transportService.start();
         clusterBootstrapService.onFoundPeersUpdated();
@@ -434,7 +551,11 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
         final AtomicBoolean bootstrapped = new AtomicBoolean();
         ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(
             Settings.builder().putList(INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getAddress().getAddress()).build(),
-            transportService, Collections::emptyList, () -> false, vc -> assertTrue(bootstrapped.compareAndSet(false, true)));
+            transportService,
+            Collections::emptyList,
+            () -> false,
+            vc -> assertTrue(bootstrapped.compareAndSet(false, true))
+        );
 
         transportService.start();
         clusterBootstrapService.onFoundPeersUpdated();
@@ -444,10 +565,12 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
 
     public void testDoesNotJustMatchEverything() {
         ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(
-            Settings.builder().putList(INITIAL_MASTER_NODES_SETTING.getKey(), randomAlphaOfLength(10)).build(), transportService,
-            Collections::emptyList, () -> false, vc -> {
-            throw new AssertionError("should not be called");
-        });
+            Settings.builder().putList(INITIAL_MASTER_NODES_SETTING.getKey(), randomAlphaOfLength(10)).build(),
+            transportService,
+            Collections::emptyList,
+            () -> false,
+            vc -> { throw new AssertionError("should not be called"); }
+        );
 
         transportService.start();
         clusterBootstrapService.onFoundPeersUpdated();
@@ -457,13 +580,18 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
     public void testDoesNotIncludeExtraNodes() {
         final DiscoveryNode extraNode = newDiscoveryNode("extra-node");
         final AtomicBoolean bootstrapped = new AtomicBoolean();
-        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(Settings.builder().putList(
-            INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getName(), otherNode1.getName(), otherNode2.getName()).build(),
-            transportService, () -> Stream.of(otherNode1, otherNode2, extraNode).collect(Collectors.toList()), () -> false,
+        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(
+            Settings.builder()
+                .putList(INITIAL_MASTER_NODES_SETTING.getKey(), localNode.getName(), otherNode1.getName(), otherNode2.getName())
+                .build(),
+            transportService,
+            () -> Stream.of(otherNode1, otherNode2, extraNode).toList(),
+            () -> false,
             vc -> {
                 assertTrue(bootstrapped.compareAndSet(false, true));
                 assertThat(vc.getNodeIds(), not(hasItem(extraNode.getId())));
-            });
+            }
+        );
 
         transportService.start();
         clusterBootstrapService.onFoundPeersUpdated();
@@ -477,13 +605,18 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
             .put(NODE_NAME_SETTING.getKey(), localNode.getName());
         final AtomicBoolean bootstrapped = new AtomicBoolean();
 
-        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(settings.build(),
-            transportService, () -> emptyList(), () -> false, vc -> {
-            assertTrue(bootstrapped.compareAndSet(false, true));
-            assertThat(vc.getNodeIds(), hasSize(1));
-            assertThat(vc.getNodeIds(), hasItem(localNode.getId()));
-            assertTrue(vc.hasQuorum(singletonList(localNode.getId())));
-        });
+        ClusterBootstrapService clusterBootstrapService = new ClusterBootstrapService(
+            settings.build(),
+            transportService,
+            Collections::emptyList,
+            () -> false,
+            vc -> {
+                assertTrue(bootstrapped.compareAndSet(false, true));
+                assertThat(vc.getNodeIds(), hasSize(1));
+                assertThat(vc.getNodeIds(), hasItem(localNode.getId()));
+                assertTrue(vc.hasQuorum(singletonList(localNode.getId())));
+            }
+        );
 
         transportService.start();
         clusterBootstrapService.onFoundPeersUpdated();
@@ -502,10 +635,15 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
             .put(NODE_NAME_SETTING.getKey(), localNode.getName())
             .put(INITIAL_MASTER_NODES_SETTING.getKey(), "test");
 
-        assertThat(expectThrows(IllegalArgumentException.class, () -> new ClusterBootstrapService(settings.build(),
-            transportService, () -> emptyList(), () -> false, vc -> fail())).getMessage(),
-            containsString("setting [" + INITIAL_MASTER_NODES_SETTING.getKey() + "] is not allowed when [discovery.type] is set " +
-                "to [single-node]"));
+        assertThat(
+            expectThrows(
+                IllegalArgumentException.class,
+                () -> new ClusterBootstrapService(settings.build(), transportService, Collections::emptyList, () -> false, vc -> fail())
+            ).getMessage(),
+            containsString(
+                "setting [" + INITIAL_MASTER_NODES_SETTING.getKey() + "] is not allowed when [discovery.type] is set " + "to [single-node]"
+            )
+        );
     }
 
     public void testFailBootstrapNonMasterEligibleNodeWithSingleNodeDiscovery() {
@@ -514,8 +652,88 @@ public class ClusterBootstrapServiceTests extends ESTestCase {
             .put(NODE_NAME_SETTING.getKey(), localNode.getName())
             .put(nonMasterNode());
 
-        assertThat(expectThrows(IllegalArgumentException.class, () -> new ClusterBootstrapService(settings.build(),
-                transportService, () -> emptyList(), () -> false, vc -> fail())).getMessage(),
-            containsString("node with [discovery.type] set to [single-node] must be master-eligible"));
+        assertThat(
+            expectThrows(
+                IllegalArgumentException.class,
+                () -> new ClusterBootstrapService(settings.build(), transportService, Collections::emptyList, () -> false, vc -> fail())
+            ).getMessage(),
+            containsString("node with [discovery.type] set to [single-node] must be master-eligible")
+        );
+    }
+
+    public void testBootstrapStateLogging() throws IllegalAccessException {
+        final var mockAppender = new MockLogAppender();
+        mockAppender.start();
+        final var serviceLogger = LogManager.getLogger(ClusterBootstrapService.class);
+        Loggers.addAppender(serviceLogger, mockAppender);
+
+        try {
+            mockAppender.addExpectation(
+                new MockLogAppender.SeenEventExpectation(
+                    "fresh node message",
+                    ClusterBootstrapService.class.getCanonicalName(),
+                    Level.INFO,
+                    "this node has not joined a bootstrapped cluster yet; [cluster.initial_master_nodes] is set to [node1, node2]"
+                )
+            );
+
+            final var metadataBuilder = Metadata.builder().clusterUUIDCommitted(false);
+            if (randomBoolean()) {
+                metadataBuilder.clusterUUID(UUIDs.randomBase64UUID(random()));
+            }
+            new ClusterBootstrapService(
+                Settings.builder().putList(INITIAL_MASTER_NODES_SETTING.getKey(), "node1", "node2").build(),
+                transportService,
+                Collections::emptyList,
+                () -> false,
+                vc -> { throw new AssertionError("should not be called"); }
+            ).logBootstrapState(metadataBuilder.build());
+
+            mockAppender.assertAllExpectationsMatched();
+
+            mockAppender.addExpectation(
+                new MockLogAppender.SeenEventExpectation(
+                    "bootstrapped node message",
+                    ClusterBootstrapService.class.getCanonicalName(),
+                    Level.INFO,
+                    "this node is locked into cluster UUID [test-uuid] and will not attempt further cluster bootstrapping"
+                )
+            );
+
+            new ClusterBootstrapService(
+                Settings.EMPTY,
+                transportService,
+                Collections::emptyList,
+                () -> false,
+                vc -> { throw new AssertionError("should not be called"); }
+            ).logBootstrapState(Metadata.builder().clusterUUID("test-uuid").clusterUUIDCommitted(true).build());
+
+            mockAppender.assertAllExpectationsMatched();
+
+            mockAppender.addExpectation(
+                new MockLogAppender.SeenEventExpectation(
+                    "bootstrapped node message if bootstrapping still configured",
+                    ClusterBootstrapService.class.getCanonicalName(),
+                    Level.WARN,
+                    """
+                        this node is locked into cluster UUID [test-uuid] but [cluster.initial_master_nodes] is set to [node1, node2]; \
+                        remove this setting to avoid possible data loss caused by subsequent cluster bootstrap attempts"""
+                )
+            );
+
+            new ClusterBootstrapService(
+                Settings.builder().putList(INITIAL_MASTER_NODES_SETTING.getKey(), "node1", "node2").build(),
+                transportService,
+                Collections::emptyList,
+                () -> false,
+                vc -> { throw new AssertionError("should not be called"); }
+            ).logBootstrapState(Metadata.builder().clusterUUID("test-uuid").clusterUUIDCommitted(true).build());
+
+            mockAppender.assertAllExpectationsMatched();
+
+        } finally {
+            Loggers.removeAppender(serviceLogger, mockAppender);
+            mockAppender.stop();
+        }
     }
 }
