@@ -17,20 +17,20 @@ import org.elasticsearch.cluster.SnapshotsInProgress.Entry;
 import org.elasticsearch.cluster.SnapshotsInProgress.ShardState;
 import org.elasticsearch.cluster.SnapshotsInProgress.State;
 import org.elasticsearch.common.Strings;
-import org.elasticsearch.common.collect.ImmutableOpenMap;
 import org.elasticsearch.common.io.stream.NamedWriteableRegistry;
 import org.elasticsearch.common.io.stream.Writeable;
 import org.elasticsearch.common.unit.ByteSizeValue;
-import org.elasticsearch.common.xcontent.ToXContent;
-import org.elasticsearch.common.xcontent.XContentBuilder;
+import org.elasticsearch.common.xcontent.XContentHelper;
 import org.elasticsearch.index.Index;
 import org.elasticsearch.index.shard.ShardId;
 import org.elasticsearch.repositories.IndexId;
 import org.elasticsearch.repositories.ShardGeneration;
 import org.elasticsearch.repositories.ShardSnapshotResult;
-import org.elasticsearch.test.AbstractDiffableWireSerializationTestCase;
 import org.elasticsearch.test.ESTestCase;
+import org.elasticsearch.test.SimpleDiffableWireSerializationTestCase;
 import org.elasticsearch.test.VersionUtils;
+import org.elasticsearch.xcontent.ToXContent;
+import org.elasticsearch.xcontent.XContentBuilder;
 
 import java.io.IOException;
 import java.util.ArrayList;
@@ -42,20 +42,20 @@ import java.util.Map;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import static org.elasticsearch.common.xcontent.XContentFactory.jsonBuilder;
+import static org.elasticsearch.xcontent.XContentFactory.jsonBuilder;
 import static org.hamcrest.Matchers.anyOf;
 import static org.hamcrest.Matchers.equalTo;
 
-public class SnapshotsInProgressSerializationTests extends AbstractDiffableWireSerializationTestCase<Custom> {
+public class SnapshotsInProgressSerializationTests extends SimpleDiffableWireSerializationTestCase<Custom> {
 
     @Override
     protected Custom createTestInstance() {
         int numberOfSnapshots = randomInt(10);
-        List<Entry> entries = new ArrayList<>();
+        SnapshotsInProgress snapshotsInProgress = SnapshotsInProgress.EMPTY;
         for (int i = 0; i < numberOfSnapshots; i++) {
-            entries.add(randomSnapshot());
+            snapshotsInProgress.withAddedEntry(randomSnapshot());
         }
-        return SnapshotsInProgress.of(entries);
+        return snapshotsInProgress;
     }
 
     private Entry randomSnapshot() {
@@ -70,20 +70,16 @@ public class SnapshotsInProgressSerializationTests extends AbstractDiffableWireS
         }
         long startTime = randomLong();
         long repositoryStateId = randomLong();
-        ImmutableOpenMap.Builder<ShardId, SnapshotsInProgress.ShardSnapshotStatus> builder = ImmutableOpenMap.builder();
-        final List<Index> esIndices = indices.keySet()
-            .stream()
-            .map(i -> new Index(i, randomAlphaOfLength(10)))
-            .collect(Collectors.toList());
+        Map<ShardId, SnapshotsInProgress.ShardSnapshotStatus> shards = new HashMap<>();
+        final List<Index> esIndices = indices.keySet().stream().map(i -> new Index(i, randomAlphaOfLength(10))).toList();
         List<String> dataStreams = Arrays.asList(generateRandomStringArray(10, 10, false));
         for (Index idx : esIndices) {
             int shardsCount = randomIntBetween(1, 10);
             for (int j = 0; j < shardsCount; j++) {
-                builder.put(new ShardId(idx, j), randomShardSnapshotStatus(randomAlphaOfLength(10)));
+                shards.put(new ShardId(idx, j), randomShardSnapshotStatus(randomAlphaOfLength(10)));
             }
         }
         List<SnapshotFeatureInfo> featureStates = randomList(5, SnapshotFeatureInfoTests::randomSnapshotFeatureInfo);
-        ImmutableOpenMap<ShardId, SnapshotsInProgress.ShardSnapshotStatus> shards = builder.build();
         return new Entry(
             snapshot,
             includeGlobalState,
@@ -121,30 +117,43 @@ public class SnapshotsInProgressSerializationTests extends AbstractDiffableWireS
 
     @Override
     protected Custom makeTestChanges(Custom testInstance) {
-        SnapshotsInProgress snapshots = (SnapshotsInProgress) testInstance;
-        List<Entry> entries = new ArrayList<>(snapshots.entries());
-        if (randomBoolean() && entries.size() > 1) {
+        final SnapshotsInProgress snapshots = (SnapshotsInProgress) testInstance;
+        SnapshotsInProgress updatedInstance = SnapshotsInProgress.EMPTY;
+        if (randomBoolean() && snapshots.count() > 1) {
             // remove some elements
-            int leaveElements = randomIntBetween(0, entries.size() - 1);
-            entries = randomSubsetOf(leaveElements, entries.toArray(new Entry[leaveElements]));
+            int leaveElements = randomIntBetween(0, snapshots.count() - 1);
+            for (List<Entry> entriesForRepo : snapshots.entriesByRepo()) {
+                for (Entry entry : entriesForRepo) {
+                    if (updatedInstance.count() == leaveElements) {
+                        break;
+                    }
+                    if (randomBoolean()) {
+                        updatedInstance = updatedInstance.withAddedEntry(entry);
+                    }
+                }
+            }
         }
         if (randomBoolean()) {
             // add some elements
             int addElements = randomInt(10);
             for (int i = 0; i < addElements; i++) {
-                entries.add(randomSnapshot());
+                updatedInstance = updatedInstance.withAddedEntry(randomSnapshot());
             }
         }
         if (randomBoolean()) {
             // modify some elements
-            for (int i = 0; i < entries.size(); i++) {
-                if (randomBoolean()) {
-                    final Entry entry = entries.get(i);
-                    entries.set(i, mutateEntry(entry));
+            for (List<Entry> perRepoEntries : updatedInstance.entriesByRepo()) {
+                final List<Entry> entries = new ArrayList<>(perRepoEntries);
+                for (int i = 0; i < entries.size(); i++) {
+                    if (randomBoolean()) {
+                        final Entry entry = entries.get(i);
+                        entries.set(i, mutateEntry(entry));
+                    }
                 }
+                updatedInstance = updatedInstance.withUpdatedEntriesForRepo(perRepoEntries.get(0).repository(), entries);
             }
         }
-        return SnapshotsInProgress.of(entries);
+        return updatedInstance;
     }
 
     @Override
@@ -159,27 +168,27 @@ public class SnapshotsInProgressSerializationTests extends AbstractDiffableWireS
 
     @Override
     protected Custom mutateInstance(Custom instance) {
-        List<Entry> entries = new ArrayList<>(((SnapshotsInProgress) instance).entries());
-        if (false || entries.isEmpty()) {
+        final SnapshotsInProgress snapshotsInProgress = (SnapshotsInProgress) instance;
+        if (snapshotsInProgress.isEmpty()) {
             // add or remove an entry
-            boolean addEntry = entries.isEmpty() ? true : randomBoolean();
-            if (addEntry) {
-                entries.add(randomSnapshot());
-            } else {
-                entries.remove(randomIntBetween(0, entries.size() - 1));
-            }
+            return snapshotsInProgress.withAddedEntry(randomSnapshot());
         } else {
             // mutate an entry
-            int index = randomIntBetween(0, entries.size() - 1);
-            Entry entry = entries.get(index);
-            entries.set(index, mutateEntry(entry));
+            final String repo = randomFrom(
+                snapshotsInProgress.asStream().map(SnapshotsInProgress.Entry::repository).collect(Collectors.toSet())
+            );
+            final List<Entry> forRepo = snapshotsInProgress.forRepo(repo);
+            int index = randomIntBetween(0, forRepo.size() - 1);
+            Entry entry = forRepo.get(index);
+            final List<Entry> updatedEntries = new ArrayList<>(forRepo);
+            updatedEntries.set(index, mutateEntry(entry));
+            return snapshotsInProgress.withUpdatedEntriesForRepo(repo, updatedEntries);
         }
-        return SnapshotsInProgress.of(entries);
     }
 
     private Entry mutateEntry(Entry entry) {
         switch (randomInt(8)) {
-            case 0:
+            case 0 -> {
                 boolean includeGlobalState = entry.includeGlobalState() == false;
                 return new Entry(
                     entry.snapshot(),
@@ -196,7 +205,8 @@ public class SnapshotsInProgressSerializationTests extends AbstractDiffableWireS
                     entry.userMetadata(),
                     entry.version()
                 );
-            case 1:
+            }
+            case 1 -> {
                 boolean partial = entry.partial() == false;
                 return new Entry(
                     entry.snapshot(),
@@ -213,9 +223,9 @@ public class SnapshotsInProgressSerializationTests extends AbstractDiffableWireS
                     entry.userMetadata(),
                     entry.version()
                 );
-            case 2:
-                List<String> dataStreams = Stream.concat(entry.dataStreams().stream(), Stream.of(randomAlphaOfLength(10)))
-                    .collect(Collectors.toList());
+            }
+            case 2 -> {
+                List<String> dataStreams = Stream.concat(entry.dataStreams().stream(), Stream.of(randomAlphaOfLength(10))).toList();
                 return new Entry(
                     entry.snapshot(),
                     entry.includeGlobalState(),
@@ -231,7 +241,8 @@ public class SnapshotsInProgressSerializationTests extends AbstractDiffableWireS
                     entry.userMetadata(),
                     entry.version()
                 );
-            case 3:
+            }
+            case 3 -> {
                 long startTime = randomValueOtherThan(entry.startTime(), ESTestCase::randomLong);
                 return new Entry(
                     entry.snapshot(),
@@ -248,7 +259,8 @@ public class SnapshotsInProgressSerializationTests extends AbstractDiffableWireS
                     entry.userMetadata(),
                     entry.version()
                 );
-            case 4:
+            }
+            case 4 -> {
                 long repositoryStateId = randomValueOtherThan(entry.startTime(), ESTestCase::randomLong);
                 return new Entry(
                     entry.snapshot(),
@@ -265,7 +277,8 @@ public class SnapshotsInProgressSerializationTests extends AbstractDiffableWireS
                     entry.userMetadata(),
                     entry.version()
                 );
-            case 5:
+            }
+            case 5 -> {
                 String failure = randomValueOtherThan(entry.failure(), () -> randomAlphaOfLengthBetween(2, 10));
                 return new Entry(
                     entry.snapshot(),
@@ -282,18 +295,17 @@ public class SnapshotsInProgressSerializationTests extends AbstractDiffableWireS
                     entry.userMetadata(),
                     entry.version()
                 );
-            case 6:
+            }
+            case 6 -> {
                 Map<String, IndexId> indices = new HashMap<>(entry.indices());
-                ImmutableOpenMap<ShardId, SnapshotsInProgress.ShardSnapshotStatus> shards = entry.shards();
                 IndexId indexId = new IndexId(randomAlphaOfLength(10), randomAlphaOfLength(10));
                 indices.put(indexId.getName(), indexId);
-                ImmutableOpenMap.Builder<ShardId, SnapshotsInProgress.ShardSnapshotStatus> builder = ImmutableOpenMap.builder(shards);
+                Map<ShardId, SnapshotsInProgress.ShardSnapshotStatus> shards = new HashMap<>(entry.shards());
                 Index index = new Index(indexId.getName(), randomAlphaOfLength(10));
                 int shardsCount = randomIntBetween(1, 10);
                 for (int j = 0; j < shardsCount; j++) {
-                    builder.put(new ShardId(index, j), randomShardSnapshotStatus(randomAlphaOfLength(10)));
+                    shards.put(new ShardId(index, j), randomShardSnapshotStatus(randomAlphaOfLength(10)));
                 }
-                shards = builder.build();
                 return new Entry(
                     entry.snapshot(),
                     entry.includeGlobalState(),
@@ -309,7 +321,8 @@ public class SnapshotsInProgressSerializationTests extends AbstractDiffableWireS
                     entry.userMetadata(),
                     entry.version()
                 );
-            case 7:
+            }
+            case 7 -> {
                 Map<String, Object> userMetadata = entry.userMetadata() != null ? new HashMap<>(entry.userMetadata()) : new HashMap<>();
                 String key = randomAlphaOfLengthBetween(2, 10);
                 if (userMetadata.containsKey(key)) {
@@ -332,7 +345,8 @@ public class SnapshotsInProgressSerializationTests extends AbstractDiffableWireS
                     userMetadata,
                     entry.version()
                 );
-            case 8:
+            }
+            case 8 -> {
                 List<SnapshotFeatureInfo> featureStates = randomList(
                     1,
                     5,
@@ -353,47 +367,41 @@ public class SnapshotsInProgressSerializationTests extends AbstractDiffableWireS
                     entry.userMetadata(),
                     entry.version()
                 );
-            default:
-                throw new IllegalArgumentException("invalid randomization case");
+            }
+            default -> throw new IllegalArgumentException("invalid randomization case");
         }
     }
 
     public void testXContent() throws IOException {
         final IndexId indexId = new IndexId("index", "uuid");
-        SnapshotsInProgress sip = SnapshotsInProgress.of(
-            Collections.singletonList(
-                new Entry(
-                    new Snapshot("repo", new SnapshotId("name", "uuid")),
-                    true,
-                    true,
-                    State.SUCCESS,
-                    Collections.singletonMap(indexId.getName(), indexId),
-                    Collections.emptyList(),
-                    Collections.emptyList(),
-                    1234567,
-                    0,
-                    ImmutableOpenMap.<ShardId, SnapshotsInProgress.ShardSnapshotStatus>builder()
-                        .fPut(
-                            new ShardId("index", "uuid", 0),
-                            SnapshotsInProgress.ShardSnapshotStatus.success(
-                                "nodeId",
-                                new ShardSnapshotResult(new ShardGeneration("shardgen"), new ByteSizeValue(1L), 1)
-                            )
-                        )
-                        .fPut(
-                            new ShardId("index", "uuid", 1),
-                            new SnapshotsInProgress.ShardSnapshotStatus(
-                                "nodeId",
-                                ShardState.FAILED,
-                                "failure-reason",
-                                new ShardGeneration("fail-gen")
-                            )
-                        )
-                        .build(),
-                    null,
-                    null,
-                    Version.CURRENT
-                )
+        SnapshotsInProgress sip = SnapshotsInProgress.EMPTY.withAddedEntry(
+            new Entry(
+                new Snapshot("repo", new SnapshotId("name", "uuid")),
+                true,
+                true,
+                State.SUCCESS,
+                Collections.singletonMap(indexId.getName(), indexId),
+                Collections.emptyList(),
+                Collections.emptyList(),
+                1234567,
+                0,
+                Map.of(
+                    new ShardId("index", "uuid", 0),
+                    SnapshotsInProgress.ShardSnapshotStatus.success(
+                        "nodeId",
+                        new ShardSnapshotResult(new ShardGeneration("shardgen"), new ByteSizeValue(1L), 1)
+                    ),
+                    new ShardId("index", "uuid", 1),
+                    new SnapshotsInProgress.ShardSnapshotStatus(
+                        "nodeId",
+                        ShardState.FAILED,
+                        "failure-reason",
+                        new ShardGeneration("fail-gen")
+                    )
+                ),
+                null,
+                null,
+                Version.CURRENT
             )
         );
 
@@ -406,36 +414,109 @@ public class SnapshotsInProgressSerializationTests extends AbstractDiffableWireS
             assertThat(
                 json,
                 anyOf(
-                    equalTo(
-                        "{\"snapshots\":[{\"repository\":\"repo\",\"snapshot\":\"name\",\"uuid\":\"uuid\","
-                            + "\"include_global_state\":true,\"partial\":true,\"state\":\"SUCCESS\","
-                            + "\"indices\":[{\"name\":\"index\",\"id\":\"uuid\"}],\"start_time\":\"1970-01-01T00:20:34.567Z\","
-                            + "\"start_time_millis\":1234567,\"repository_state_id\":0,\"shards\":["
-                            + "{\"index\":{\"index_name\":\"index\",\"index_uuid\":\"uuid\"},\"shard\":0,\"state\":\"SUCCESS\","
-                            + "\"generation\":\"shardgen\",\"node\":\"nodeId\","
-                            + "\"result\":{\"generation\":\"shardgen\",\"size\":\"1b\",\"size_in_bytes\":1,\"segments\":1}},"
-                            + "{\"index\":{\"index_name\":\"index\",\"index_uuid\":\"uuid\"},\"shard\":1,\"state\":\"FAILED\","
-                            + "\"generation\":\"fail-gen\",\"node\":\"nodeId\",\"reason\":\"failure-reason\"}"
-                            + "],\"feature_states\":[],\"data_streams\":[]}]}"
-                    ), // or the shards might be in the other order:
-                    equalTo(
-                        "{\"snapshots\":[{\"repository\":\"repo\",\"snapshot\":\"name\",\"uuid\":\"uuid\","
-                            + "\"include_global_state\":true,\"partial\":true,\"state\":\"SUCCESS\","
-                            + "\"indices\":[{\"name\":\"index\",\"id\":\"uuid\"}],\"start_time\":\"1970-01-01T00:20:34.567Z\","
-                            + "\"start_time_millis\":1234567,\"repository_state_id\":0,\"shards\":["
-                            + "{\"index\":{\"index_name\":\"index\",\"index_uuid\":\"uuid\"},\"shard\":1,\"state\":\"FAILED\","
-                            + "\"generation\":\"fail-gen\",\"node\":\"nodeId\",\"reason\":\"failure-reason\"},"
-                            + "{\"index\":{\"index_name\":\"index\",\"index_uuid\":\"uuid\"},\"shard\":0,\"state\":\"SUCCESS\","
-                            + "\"generation\":\"shardgen\",\"node\":\"nodeId\","
-                            + "\"result\":{\"generation\":\"shardgen\",\"size\":\"1b\",\"size_in_bytes\":1,\"segments\":1}}"
-                            + "],\"feature_states\":[],\"data_streams\":[]}]}"
-                    )
+                    equalTo(XContentHelper.stripWhitespace("""
+                        {
+                          "snapshots": [
+                            {
+                              "repository": "repo",
+                              "snapshot": "name",
+                              "uuid": "uuid",
+                              "include_global_state": true,
+                              "partial": true,
+                              "state": "SUCCESS",
+                              "indices": [ { "name": "index", "id": "uuid" } ],
+                              "start_time": "1970-01-01T00:20:34.567Z",
+                              "start_time_millis": 1234567,
+                              "repository_state_id": 0,
+                              "shards": [
+                                {
+                                  "index": {
+                                    "index_name": "index",
+                                    "index_uuid": "uuid"
+                                  },
+                                  "shard": 0,
+                                  "state": "SUCCESS",
+                                  "generation": "shardgen",
+                                  "node": "nodeId",
+                                  "result": {
+                                    "generation": "shardgen",
+                                    "size": "1b",
+                                    "size_in_bytes": 1,
+                                    "segments": 1
+                                  }
+                                },
+                                {
+                                  "index": {
+                                    "index_name": "index",
+                                    "index_uuid": "uuid"
+                                  },
+                                  "shard": 1,
+                                  "state": "FAILED",
+                                  "generation": "fail-gen",
+                                  "node": "nodeId",
+                                  "reason": "failure-reason"
+                                }
+                              ],
+                              "feature_states": [],
+                              "data_streams": []
+                            }
+                          ]
+                        }""")),
+                    // or the shards might be in the other order:
+                    equalTo(XContentHelper.stripWhitespace("""
+                        {
+                          "snapshots": [
+                            {
+                              "repository": "repo",
+                              "snapshot": "name",
+                              "uuid": "uuid",
+                              "include_global_state": true,
+                              "partial": true,
+                              "state": "SUCCESS",
+                              "indices": [ { "name": "index", "id": "uuid" } ],
+                              "start_time": "1970-01-01T00:20:34.567Z",
+                              "start_time_millis": 1234567,
+                              "repository_state_id": 0,
+                              "shards": [
+                                {
+                                  "index": {
+                                    "index_name": "index",
+                                    "index_uuid": "uuid"
+                                  },
+                                  "shard": 1,
+                                  "state": "FAILED",
+                                  "generation": "fail-gen",
+                                  "node": "nodeId",
+                                  "reason": "failure-reason"
+                                },
+                                {
+                                  "index": {
+                                    "index_name": "index",
+                                    "index_uuid": "uuid"
+                                  },
+                                  "shard": 0,
+                                  "state": "SUCCESS",
+                                  "generation": "shardgen",
+                                  "node": "nodeId",
+                                  "result": {
+                                    "generation": "shardgen",
+                                    "size": "1b",
+                                    "size_in_bytes": 1,
+                                    "segments": 1
+                                  }
+                                }
+                              ],
+                              "feature_states": [],
+                              "data_streams": []
+                            }
+                          ]
+                        }"""))
                 )
             );
         }
     }
 
-    public static State randomState(ImmutableOpenMap<ShardId, SnapshotsInProgress.ShardSnapshotStatus> shards) {
+    public static State randomState(Map<ShardId, SnapshotsInProgress.ShardSnapshotStatus> shards) {
         return SnapshotsInProgress.completed(shards.values())
             ? randomFrom(State.SUCCESS, State.FAILED)
             : randomFrom(State.STARTED, State.INIT, State.ABORTED);
